updated with modal and email

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
           {% endif %}
         </div>
       </div>
+      <div class="pull-sm-left">
+          Source files checked : <button class="ui button grey compact">{{mjhdt | humanize}}</button>
+      </div>
     </div>
     <div class="table-responsive">
       <table id="listr-table" class="table table-hover">
@@ -125,36 +128,27 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="ui header large">NCT Study Number :</h1><h2>NCT012345</h2>
+            <h1 class="ui header large">NCT Study Number : NCT012345</h1>
           </div>
           <div class="modal-body">
-            <table class="ui single line table">
+            <table class="ui very basic table">
               <thead>
                 <tr>
-                  <th>Name</th>
-                  <th>Registration Date</th>
-                  <th>E-mail address</th>
-                  <th>Premium Plan</th>
+                  <th class="four wide">Item</th>
+                  <th class="tweleve wide">Details</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>John Lilki</td>
-                  <td>September 14, 2013</td>
-                  <td>jhlilk22@yahoo.com</td>
-                  <td>No</td>
+                <tr><td>Official Title</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, vitae.</td>
                 </tr>
                 <tr>
-                  <td>Jamie Harington</td>
-                  <td>January 11, 2014</td>
-                  <td>jamieharingonton@yahoo.com</td>
-                  <td>Yes</td>
+                  <td>Brief Title</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, non?</td>
                 </tr>
                 <tr>
-                  <td>Jill Lewis</td>
-                  <td>May 11, 2014</td>
-                  <td>jilsewris22@yahoo.com</td>
-                  <td>Yes</td>
+                  <td>Description</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit sed iste accusantium voluptates eum, fugiat perferendis nulla dolorem. Quod dolor nesciunt distinctio minima non, inventore laudantium sit voluptate velit doloribus voluptatibus hic eligendi eveniet deleniti dolorem libero aperiam pariatur aliquid. Dolore incidunt in accusantium dignissimos cum excepturi, architecto, qui dolorem?</td>
                 </tr>
               </tbody>
             </table>
